--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
   - TERM=dumb ./gradlew check -i
 
 after_success:
-  - ./gradlew jacocoTestReport coveralls
+  - ./gradlew jacocoTestReport codecov
