--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: java
 jdk:
   - openjdk8
+before_install:
+  - chmod +x gradlew
 
 install:
-  - TERM=dumb chmod +x gradlew
   - TERM=dumb ./gradlew assemble
 
 script:
