--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,6 @@
 language: java
 jdk:
   - openjdk8
-  
-    
-before_install:
-  - chmod +x gradlew
-
-install:
-  - TERM=dumb ./gradlew assemble
-
-script:
-  - TERM=dumb ./gradlew check -i
 
 after_success:
-  - ./gradlew jacocoTestReport
-  - codecov
-  - bash <(curl -s https://codecov.io/bash) -t 3612a4bb-6a1f-4ed3-bd6e-d17f17601166
+  - bash <(curl -s https://codecov.io/bash)
